styles.css
body {
  margin: 0;
  padding: 0;
  font-family: "inter", sans-serif;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.container{
  max-width: 80%;
  margin: 0 auto;
}

/* .nav__container{
   display: flex;
   justify-content: center;
    align-items: center;
} */

.nav__wrapper{
max-width: 80%;
display: flex;
justify-content: space-between;
align-items: center;
gap: 9rem;
padding-top: 2rem;
}
.home__link{
  color: #F55253;
}
.search-cart{
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
}
.search{
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 0;
}
.search__input{
  border: 1px solid #ccc;
  padding: 0.5rem 1rem;
  border-top-left-radius: 0.9rem;
  border-bottom-left-radius: 0.9rem;
  outline: none;
  border-right: none;
}

.search-icon{
  padding: 0.4rem 0.5rem;
  border-top-right-radius: 0.9rem;
  border-bottom-right-radius: 0.9rem;
  cursor: pointer;
  border: 1px solid #ccc;
  outline: none;
  background-color: white;
  border-left: none;
}


.nav-links ul {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
}

.nav-links ul li {
  list-style: none;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 20px;
  padding-right: 20px;
}
.nav-links ul a {
  text-decoration: none;
  color: black;
}

.nav-links ul li a {
  text-decoration: none;
  color: black;
}

.home-title {
  margin-left: 9%;
  margin-top: 50px;
}
.intro-feature{
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 14rem;
  gap: 1rem;
  background: #FDECEC;
  padding-left: 1rem;
  padding-right: 1rem;
  position: relative;
  border-radius: 1.5rem;
  font-family: Poppins;
  font-style: normal;
  font-weight: 500;

}
.pear{
position: absolute;
top: 0.5rem;
right: 0.5rem;
}
.hero-section{
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 0;
  margin-top: 5rem;
  padding-bottom: 4.8rem;
 
}
.right-hero-section{
  display: flex;
  flex-direction: column;
 
}
.red-text{
  color: #F54748;
}
.hero-large-text{
color: #2E2E2E;
font-family: Poppins;
font-size: 4.6rem;
font-style: normal;
font-weight: 700;
line-height: 88px; /* 118.919% */
letter-spacing: -0.74px;
}

.light-text{
  color: #676767;
font-family: Poppins;
font-size: 1.1rem;
font-style: normal;
font-weight: 400;
line-height: 30px; /* 166.667% */
letter-spacing: 0.09px;
}
.call-to-action{
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 5rem;
}
.order-button{
  background: #F86061;
border-radius: 1.5rem;
padding: 1rem 2rem;
color: white;
border: none;
}

.play-button{
  border-radius: 50%;
  width: 70px;
height: 70px;
flex-shrink: 0;
border: none;
}

.play-wrapper{
  background:#ffffff;
  border:none
}
.play{
  display: flex;
  padding-right: 6rem;
}
.features{
  background: #FEF5F5; 
  padding-top: 6.25rem;
  padding-bottom: 8.25rem;
}

.feature-container{
  max-width: 80%;
  margin: 0 auto;
}
.feature__intro{
 text-align: center;
}
.feature__intro p{
  color: #F54748;
}
.feature__intro h2{
  color: #2E2E2E;
text-align: center;
font-family: Poppins;
font-size: 2.5rem;
font-style: normal;
font-weight: 700;
line-height: 54px; /* 135% */
text-transform: capitalize;
}
.features__wrapper{
  display: flex;
  justify-content:space-around;
  align-items:center;
}
.feature__item{
  background-color: #ffffff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 3.3rem;
  padding-bottom: 3.3rem;
  height: 100%;
  border-radius: 0.9rem;
  border-radius: 12px;
box-shadow: 0px 40px 120px 0px rgba(50, 8, 8, 0.06);
position: relative;
}
.feature__image{
  margin-left: auto;
  margin-right: auto;
}
.feature__image img{
  width: 80px;
  height: 70px;
}
.feature__text{
  text-align: center;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 1.5rem;
}
#middle__box {
 position: relative;
}
.skewed__box {
  position: absolute;
  border-radius: 0.75rem;
  width: 310px;
  height: 334px;
  top: 0;
  left: 1rem;
  transform: rotate(-3deg);
  z-index: -1;
}

.skewed__box::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  background: #FE6A6A;
  z-index: -1;
}

.why__choose{
  display: flex;
  max-width: 80%;
  margin: 0 auto;
  padding-top: 5.5rem;
  gap: 9rem;
  align-items: center;
  padding-bottom: 5.5rem;
}
.choose__image{
  margin-left: auto;
  margin-right: auto;
  max-width: 48rem;
  max-height: 32rem;
  border-radius: 2rem;
}
.why__choose__text__title{
  color: #03A66B;
  font-family: Poppins;
  font-size: 1.5rem;
  font-style: normal;
  font-weight: 700;
  line-height: 54px; /* 135% */
  text-transform: capitalize;
}

.why__choose__text__subtitle{
  color: #2E2E2E;
font-family: Poppins;
font-size: 40px;
font-style: normal;
font-weight: 700;
line-height: 54px; /* 135% */
text-transform: capitalize;
}
 .desc__text__wrapper{
  max-width: 30rem;
 }

.styled_choice{
  color: #F54748;
}
.order-button-choice{
  background: #F86061;
  border-radius: 1rem;
  padding: 1rem 2rem;
  color: white;
  border: none;
  margin-top: 2rem;
}
.delivery__section{
  display: flex;
  max-width: 80%;
  margin: 0 auto;
  padding-top: 5.5rem;
  gap: 9rem;
  align-items: center;
  padding-bottom: 5.5rem;
}
.intro__feature{
  color: #F9BA45;
  font-family: "inter", sans-serif;
font-size: 1.1rem;
font-style: normal;
font-weight: 400;
line-height: 24px; /* 133.333% */
letter-spacing: 0.18px;
}
.intro__title{
  color: #2E2E2E;
font-family: Poppins;
font-size: 2.5rem;
font-style: normal;
font-weight: 700;
line-height: 54px; /* 135% */
text-transform: capitalize;
}
.delivery__body__text{
  color: #676767;
font-family: Poppins;
font-size: 1.13rem;
font-style: normal;
font-weight: 400;
line-height: 1.8rem; /* 166.667% */
}
.delivery__callTo__action button{
  border-radius: 12px;
border: 1.5px solid #F86061;
padding: 1rem 2rem;
margin-top: 2rem;
background-color: #ffffff;
}
.cheese__image{
  max-width: 42.7rem;
  max-height: 41.4rem;
}
.right__section{
  position: relative;
}
.bike__delivery{
  position: absolute;
  width: 10.4rem;
  height: 14rem;
  top: 7rem;
  left: -8rem;
}
.CTA{
 
    background: #FEF5F5; 
    padding-top: 6.25rem;
    padding-bottom: 8.25rem;
}
.CTA__wrapper{
  max-width: 80%;
    margin: 0 auto;
    display: flex;
    justify-content: space-around;
    align-items: center;

}
.download__intro{
color: #F54748;
font-family: "inter", sans-serif;
font-size: 1.1rem;
font-style: normal;
font-weight: 400;
line-height: 24px; /* 133.333% */
letter-spacing: 0.18px;
}
.download__title{
  color: #2E2E2E;
  font-family: Poppins;
  font-size: 2.5rem;
  font-style: normal;
  font-weight: 700;
  line-height: 54px; /* 135% */
  text-transform: capitalize;
}
.download__body__text{
  color: #676767;
font-family: Poppins;
font-size: 1.13rem;
font-style: normal;
font-weight: 400;
line-height: 1.8rem; /* 166.667% */
}
.download__callTo__action{
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2rem;
}
.download__callTo__action button{
  border-radius: 12px;
  border: 1.5px solid #EEDCDC;
  background: #FEF5F5; 
  padding: 0.6rem 2rem;
  display: flex;
  gap: 2rem;
}
.footer{
  max-width: 80%;
  margin: 0 auto;
  padding-top: 6.25rem;
  padding-bottom: 8.25rem;
}
.footer__links{
  display: flex;
  gap: 10rem;
  justify-content: center;
  color: #676767;
  font-family: Poppins;
  padding-bottom: 3rem;
}
/* .footer__title{
  text-align: center;
} */
.footer__links ul{
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding-left: 0;
}
.footer__links ul li{
  list-style: none;
 
}
.footer__links ul li a{
  text-decoration: none;
  color: #676767;
font-family: Poppins;
font-size: 0.9rem;
font-style: normal;
font-weight: 400;
line-height: 1.8rem; /* 166.667% */
}
.footer__form{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0;
  margin-top: 2rem;
}

.footer__form input{
 padding: 0.5rem 1rem;
  border-top-left-radius: 1rem;
  border-bottom-left-radius: 1rem;
  outline: none;
  border-right: none;
  border: 1px solid #ccc;
}
.footer__form button{
  padding: 0.5rem 1rem;
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 1rem;
  outline: none;
  border-left: none;
  border: 1px solid #ccc;
  background-color: #FEF5F5;
  cursor: pointer;
}
hr{
  background: #ECECEC;
  opacity: 0.5;
}
.copyright{
  color: #676767;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 43rem;
}
.terms__privacy{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}
.terms__privacy a{
  text-decoration: none;
  color: #676767;
}


















































.contact-wrapper {
  margin-left: 9%;
  margin-top: 50px;
  width: 35%;
}

.input-fields {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  margin-bottom: 10px;
}
#nameField {
  width: 300px;
  height: 30px;
  border-radius: 5px;
  border: 1px solid #ccc;
  padding-left: 10px;
  margin-bottom: 10px;
}
#emailField {
  width: 300px;
  height: 30px;
  border-radius: 5px;
  border: 1px solid #ccc;
  padding-left: 10px;
  margin-bottom: 10px;
}

#messageField {
  width: 98%;
  height: 100px;
  border-radius: 5px;
  border: 1px solid #ccc;
  padding-left: 10px;
  margin-bottom: 2px;
}

#btn {
  width: 100px;
  height: 30px;
  border-radius: 5px;
  border: 1px solid #ccc;
  background-color: #b4e4ff;
  color: white;
  cursor: pointer;
}

#btn:hover {
  background-color: #a3d4f5;
  color: white;
}

/* Media Queries */
@media screen and (max-width: 768px) {
  .contact-wrapper {
    width: 100%;
  }
  #messageField {
    width: 78%;
  }
}

